# zephyr-nucleo-l476rg-examples

./: README.md
app_papuga/: CMakeLists.txt  app.overlay  prj.conf
app_papuga/src/: main.cpp  papuga_scalled.c
app_temp_tft_display/: CMakeLists.txt  app.overlay  gemini_demo.c  prj.conf
app_temp_tft_display/include/: temp_sensor.h
app_temp_tft_display/src/: main.cpp
user_led_button/: CMakeLists.txt
user_led_button/src/: main.c
